styles.css
body{
    font-family: 'Consolas', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', monospace;
    background-color: #f4f4f4;
    font-size: 1rem;
}
h1{

    text-align: center;
    font-size: 40px;
    font-weight: bolder;

}
h2{
    color: darkblue;
    margin-left: 25px;
}
h3{
    color: blue;
    margin-left: 10px;
}
@media (max-width: 768px){
    body{

        font-size: 0.8rem;
    }

    h1{
        font-size: 20px;
    }
}

.avatar {
    width: 100px;
    height: 100px;
}
button{
    border-radius: 18%;
    border_radius: 5px;
}

.g, .t, .m{
    padding: 40px 20px;
    border-radius: 18%;
    width: 150px;
    height: 100px;
    vertical-align: top;

}
.nav-buttons {
    display: flex;
    justify-content: center;
    gap: 5px;
}
.text{
    text-align:center;
}
.cb{
    color: deeppink;

    border: 2px solid deeppink;


}

